<resources>
    <string name="app_name">TCP Sender</string>

    <string name="title_section1">Send</string>
    <string name="title_section2">Log</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_load">Load</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_reset">Reset</string>

    <string name="action_copy">Copy</string>
    <string name="action_clear">Clear</string>

    <string name="action_about">About</string>
    <string name="about_string" translatable="false">sfanxiang.github.io</string>

    <string name="string_connected">Connected</string>
    <string name="string_connect_fail">Failed to connect</string>
    <string name="string_sent">Message sent</string>

    <string name="string_name">Name:</string>
    <string name="string_host">Host:</string>
    <string name="string_message">Message</string>
    <string name="string_connect">Connect</string>
    <string name="string_connecting">Connecting</string>
    <string name="string_disconnect">Disconnect</string>
    <string name="string_disconnecting">Disconnecting</string>
    <string name="string_send">Send</string>
    <string name="string_sending">Sending</string>
    <string name="string_copied">Copied to clipboard</string>
</resources>
