<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_load"
        android:showAsAction="withText|ifRoom"
        android:title="@string/action_load" />
    <item
        android:id="@+id/action_save"
        android:showAsAction="withText|ifRoom"
        android:title="@string/action_save" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_delete" />
    <item
        android:id="@+id/action_reset"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_reset" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/action_about" />
</menu>
